crates/toml/tests/snapshots/invalid/ext/datetime/hour-too-large.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-09T30:09:09.09Z
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid time, expected hour between 00 and 23
